--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ html {
 
 @layer base {
   .input {
-    @apply placeholder:text-white/[0.32] hover:border-grey-30 focus:bg-grey-60 focus:border-grey-10 outline-none focus:opacity-100 border border-grey-60 rounded-base py-3 px-2 bg-grey-80 text-white;
+    @apply disabled:opacity-10 placeholder:text-white/[0.32] hover:border-grey-30 focus:bg-grey-60 focus:border-grey-10 outline-none focus:opacity-100 border border-grey-60 rounded-base py-3 px-2 bg-grey-80 text-white;
   }
   .label {
     @apply capitalize text-message leading-[16px] text-white/[0.56] mb-1;
@@ -51,10 +51,10 @@ html {
 @layer components {
 
   .btn {
-    @apply flex items-center bg-grey-60 py-2 px-4 rounded-base hover:bg-grey-50 active:bg-grey-40 text-white;
+    @apply disabled:opacity-10 flex items-center bg-grey-60 py-2 px-4 rounded-base hover:bg-grey-50 active:bg-grey-40 text-white;
   }
   .btn.btn-round{
-    @apply rounded-full bg-gradient-to-b from-grey-90/70 ;
+    @apply disabled:opacity-10 rounded-full bg-gradient-to-b from-grey-90/70 ;
   }
   .icon {
     @apply w-[24px] h-[24px] flex-center;
